--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <![endif]-->
   </head>
   <body>
+    <article>
     <header>
       <h1>Coding Exercise</h1>
       </header>
@@ -31,17 +32,17 @@
       </nav>
 
     <article>
-    <section>
+    
       <header>
         <h2>Source Documents</h2>
       </header>
+      <section>
         <h3>Bootstrap</h3>
         <h4><a href="http://getbootstrap.com/">Bootstrap Home Page</a></h4>
         <h4><a href="https://github.com/twbs/bootstrap">Bootstrap on Github</a></h4>
         <h4><a href="http://getbootstrap.com/getting-started/">Basic Bootstrap Template</a></h4>
-
-    </section>
-    <section>
+      </section>
+      <section>
       <header>
           <h2>Validation References</h2>
       </header>
@@ -64,8 +65,10 @@
 </figure>
       
       </section>
+      </article>
     </article>
     <footer>&nbsp;</footer>
+    <aside><a href="http://www.w3.org/html/wg/drafts/html/master/semantics.html#the-article-element">Each article should be identified, typically by including a heading (h1–h6 element) as a child of the article element.</a></aside>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
