--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </section>
       </article>
     </article>
-    <aside>
+    <aside style="width:100%"><!--Temporary override of Bootstrap style for aside-->
       <h4>References</h4>
       <ul>
         <li><a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/Sections_and_Outlines_of_an_HTML5_document">Notes on Assistive Technology and Validation</a></li>
