--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <h1>Coding Exercise</h1>
       </header>
       <nav>
-        <header>Nav Menu</header>
+        <header><h3>Nav Menu</h3></header>
         <ul>
           <li>Source Documents</li>
           <li>Validation</li>
@@ -63,7 +63,7 @@
         <figure>
   <img src="http://www.fredcavazza.net/files/2009/09/html5_structure.png" alt="Example of HTML5 structuring tags" />
   <figcaption>
-    Fig. 1 : an example of how new structuring elements could be used. This page put a &lt;nav&gt; on top, and does not have headers and footer for each article, like in this figure, but it could... By the way, this is a &lt;figcaption&gt; inside a &lt;figure&gt; element...
+    <h5>Fig. 1 : an example of how new structuring elements could be used. This page put a &lt;nav&gt; on top, and does not have headers and footer for each article, like in this figure, but it could... By the way, this is a &lt;figcaption&gt; inside a &lt;figure&gt; element...</h5>
   </figcaption>
 </figure>
       
