--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     <aside style="width:100%"><!--Temporary override of Bootstrap style for aside-->
       <h4>References</h4>
       <ul>
+        <li><a href="https://validator.w3.org/">Nu Validator</a></li>
         <li><a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/Sections_and_Outlines_of_an_HTML5_document">Notes on Assistive Technology and Validation</a></li>
         <li><a href="http://www.w3.org/html/wg/drafts/html/master/semantics.html#the-article-element">Each article should be identified, typically by including a heading (h1–h6 element) as a child of the article element.</a></li>
       </ul>  
