--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <![endif]-->
     <!-- USFSP -->
     <link rel='stylesheet' id='avia-google-webfont' href='//fonts.googleapis.com/css?family=PT+Sans%7COpen+Sans:400,600%7CEB+Garamond' type='text/css' media='all'/>
-    
+    <link href="usfsp.css" rel="stylesheet">
     <!-- end USFSP -->
   </head>
   <body>
