--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     
-    <header id="branding">
+    <header id="header" class="header_color dark_bg_color">
       <h1>Coding Exercise</h1>
       </header>
       <nav>
