--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <!-- end USFSP -->
   </head>
   <body>
-    
-    <header class="header_color">
+    <div class="container-fluid header_color"></div>
+    <header>
       <h1>Coding Exercise</h1>
       </header>
       <nav>
@@ -40,7 +40,7 @@
           <li>Illustrations</li>
         </ul>
       </nav>
-
+  </div>
     <article>
     
       <header>
