--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <!-- end USFSP -->
   </head>
   <body>
-    <div class="container-fluid header_color"></div>
+    <div class="container-fluid style="background:#137255;">
+      <div class="col-md-12">
     <header>
       <h1>Coding Exercise</h1>
       </header>
@@ -40,7 +41,8 @@
           <li>Illustrations</li>
         </ul>
       </nav>
-  </div>
+      </div><!-- closes md12 -->
+  </div><!-- closes container fluid -->
     <article>
     
       <header>
