--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <div class="container-fluid style="color:#ffffff;background: #137255;">
-      <div class="col-md-12">
+      <div class="col-md-12" style="color:#ff0000;">
     <header>
       <h1>Coding Exercise</h1>
       </header>
