--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- end USFSP -->
   </head>
   <body>
-    <div class="container-fluid style="color:#ffffff;background: #137255;">
+    <div class="container-fluid" style="color:#ffffff;background: #137255;">
       <div class="col-md-12" style="color:#ff0000;">
     <header>
       <h1>Coding Exercise</h1>
