--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <!-- end USFSP -->
   </head>
   <body>
-    <div class="container-fluid" style="color:#ffffff;background: #137255;">
-      <div class="col-md-12" style="color:#ff0000;">
+    <div class="container-fluid" style="color:#ff0000;background-color:#137255;">
+      <div class="col-md-12">
     <header>
       <h1>Coding Exercise</h1>
       </header>
