--- a/index.html
+++ b/index.html
@@ -43,24 +43,32 @@
       </nav>
       </div><!-- closes md12 -->
   </div><!-- closes container fluid -->
+  <div class="container-fluid">
     <article>
-    
+    <div class="col-md-12">
       <header>
         <h2>Source Documents</h2>
       </header>
+      </div><!-- closes md12 for header -->
+      <div class="col-md-4">
       <section>
         <h3>Bootstrap</h3>
         <h4><a href="http://getbootstrap.com/">Bootstrap Home Page</a></h4>
         <h4><a href="https://github.com/twbs/bootstrap">Bootstrap on Github</a></h4>
         <h4><a href="http://getbootstrap.com/getting-started/">Basic Bootstrap Template</a></h4>
       </section>
+      </div><!-- closes colmd4 -->
+      <div class="col-md-4">
       <section>
       <header>
           <h2>Validation References</h2>
       </header>
           <h3><a href="https://validator.w3.org/">W3C Validator</a></h3>
       </section>
+      </div><!-- closes md4 -->
+      <div class="col-md-4">Facebook here</div>
     </article>
+    </div><!-- closes container fluid -->
     <article>
       <header>
         <h2>Illustrations</h2>
