--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
   </div><!-- closes container fluid -->
   <div class="container-fluid">
     <article>
-    <div class="col-md-12 col-xs-12">
+    <div class="col-sm-12 col-xs-12">
       <header>
         <h2>Source Documents</h2>
       </header>
       </div><!-- closes md12 for header -->
-      <div class="col-md-4 col-xs-6">
+      <div class="col-sm-4 col-xs-6">
       <section>
         <h3>Bootstrap</h3>
         <h4><a href="http://getbootstrap.com/">Bootstrap Home Page</a></h4>
@@ -58,7 +58,7 @@
         <h4><a href="http://getbootstrap.com/getting-started/">Basic Bootstrap Template</a></h4>
       </section>
       </div><!-- closes colmd4 -->
-      <div class="col-md-4 col-xs-6">
+      <div class="col-sm-4 col-xs-6">
       <section>
       <header>
           <h2>Validation References</h2>
