--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <!-- USFSP -->
-    <link rel='stylesheet' id='avia-google-webfont' href='//fonts.googleapis.com/css?family=PT+Sans%7COpen+Sans:400,600%7CEB+Garamond' type='text/css' media='all'/>
+    <!-- <link rel='stylesheet' id='avia-google-webfont' href='//fonts.googleapis.com/css?family=PT+Sans%7COpen+Sans:400,600%7CEB+Garamond' type='text/css' media='all'/> -->
     <link href="http://cook-my-catch.github.io/usfsp.css" rel="stylesheet">
     <!-- end USFSP -->
   </head>
@@ -47,7 +47,7 @@
     <article>
     <div class="col-sm-12 col-xs-12">
       <header>
-        <h2>Source Documents</h2>
+        <h2 stle="color:#ffffff;">Source Documents</h2>
       </header>
       </div><!-- closes md12 for header -->
       <div class="col-sm-4 col-xs-6">
