--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container-fluid header">
       <div class="col-md-12 col-xs-12">
     <header>
-      <h1>Coding Exercise</h1>
+      <h1 style="color:#ffffff;">Coding Exercise</h1>
       </header>
       <nav>
         <header><h3>Nav Menu</h3></header>
@@ -47,7 +47,7 @@
     <article>
     <div class="col-sm-12 col-xs-12">
       <header>
-        <h2 stle="color:#ffffff;">Source Documents</h2>
+        <h2>Source Documents</h2>
       </header>
       </div><!-- closes md12 for header -->
       <div class="col-sm-4 col-xs-6">
