--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <div class="container-fluid header">
-      <div class="col-md-12 col-xs-12">
+      <div class="col-md-12">
     <header>
       <h1 style="color:#ffffff;">Coding Exercise</h1>
       </header>
