--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <h2>Source Documents</h2>
       </header>
       </div><!-- closes md12 for header -->
-      <div class="col-md-4">
+      <div class="col-xs-6 col-md-4">
       <section>
         <h3>Bootstrap</h3>
         <h4><a href="http://getbootstrap.com/">Bootstrap Home Page</a></h4>
@@ -58,7 +58,7 @@
         <h4><a href="http://getbootstrap.com/getting-started/">Basic Bootstrap Template</a></h4>
       </section>
       </div><!-- closes colmd4 -->
-      <div class="col-md-4">
+      <div class="col-xs-6 col-md-4">
       <section>
       <header>
           <h2>Validation References</h2>
@@ -66,7 +66,7 @@
           <h3><a href="https://validator.w3.org/">W3C Validator</a></h3>
       </section>
       </div><!-- closes md4 -->
-      <div class="col-md-4">Facebook here</div>
+      <div class="col-xs-6 col-md-4">Facebook here</div>
     </article>
     </div><!-- closes container fluid -->
     <article>
