--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <script src="js/bootstrap.min.js"></script>
     <!-- Placed at the end of the document so the pages load faster -->
     <!-- check for below -->
-    <script src="http://getboostrap.com/dist/js/bootstrap.min.js"></script>
+    <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
