--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container-fluid header">
       <div class="col-md-12">
     <header>
-      <h1 style="color:#ffffff;">Coding Exercise</h1>
+      <h1>Coding Exercise</h1>
       </header>
       <nav>
         <header><h3>Nav Menu</h3></header>
