--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- end USFSP -->
   </head>
   <body>
-    <div class="container-fluid header">
+    <div class="container-fluid header hfgreen">
       <div class="col-md-12">
     <header>
       <h1>Coding Exercise</h1>
