--- a/index_backup1.html
+++ b/index_backup1.html
@@ -23,12 +23,12 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <!-- USFSP -->
-    <link rel='stylesheet' id='avia-google-webfont' href='//fonts.googleapis.com/css?family=PT+Sans%7COpen+Sans:400,600%7CEB+Garamond' type='text/css' media='all'/>
-    <link href="http://cook-my-catch.github.io/usfsp.css" rel="stylesheet">
+    <!-- <link rel='stylesheet' id='avia-google-webfont' href='//fonts.googleapis.com/css?family=PT+Sans%7COpen+Sans:400,600%7CEB+Garamond' type='text/css' media='all'/> -->
+    <link href="usfsp.css" rel="stylesheet">
     <!-- end USFSP -->
   </head>
   <body>
-    <div class="container-fluid header">
+    <div class="container-fluid header hfgreen">
       <div class="col-md-12">
     <header>
       <h1>Coding Exercise</h1>
@@ -41,6 +41,32 @@
           <li>Illustrations</li>
         </ul>
       </nav>
+      <!--enter here for Bootstrap nav class -->
+       <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Coding Exercise</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <form class="navbar-form navbar-right">
+            <div class="form-group">
+              <input type="text" placeholder="Email" class="form-control">
+            </div>
+            <div class="form-group">
+              <input type="password" placeholder="Password" class="form-control">
+            </div>
+            <button type="submit" class="btn btn-success">Sign in</button>
+          </form>
+        </div><!--/.navbar-collapse -->
+      </div>
+    </nav>
+      <!-- stop here for Bootstrap nav class -->
       </div><!-- closes md12 -->
   </div><!-- closes container fluid -->
   <div class="container-fluid">
@@ -50,7 +76,7 @@
         <h2>Source Documents</h2>
       </header>
       </div><!-- closes md12 for header -->
-      <div class="col-md-4">
+      <div class="col-xs-6 col-md-4">
       <section>
         <h3>Bootstrap</h3>
         <h4><a href="http://getbootstrap.com/">Bootstrap Home Page</a></h4>
@@ -66,24 +92,16 @@
           <h3><a href="https://validator.w3.org/">W3C Validator</a></h3>
       </section>
       </div><!-- closes md4 -->
-      <div class="col-md-4">Facebook here</div>
+      <div class="col-md-4">
+        <aside>
+          Aside with Calendar
+        </aside>
+      </div><!-- closes md4 -->
     </article>
     </div><!-- closes container fluid -->
-    <article>
-      <header>
-        <h2>Illustrations</h2>
-      </header>
-      <section>
-        <figure>
-  <img src="http://www.fredcavazza.net/files/2009/09/html5_structure.png" alt="Example of HTML5 structuring tags" />
-  <figcaption>
-    <h5>Fig. 1 : an example of how new structuring elements could be used. This page put a &lt;nav&gt; on top, and does not have headers and footer for each article, like in this figure, but it could... By the way, this is a &lt;figcaption&gt; inside a &lt;figure&gt; element...</h5>
-  </figcaption>
-</figure>
-      
-      </section>
-        </article>
-    <aside style="width:100%"><!--Temporary override of Bootstrap style for aside-->
+    <div class="container-fluid hfgreen">
+    <footer>
+    <aside>
       <h4>References</h4>
       <ul>
         <li><a href="https://validator.w3.org/">Nu Validator</a></li>
@@ -91,11 +109,18 @@
         <li><a href="http://www.w3.org/html/wg/drafts/html/master/semantics.html#the-article-element">Each article should be identified, typically by including a heading (h1–h6 element) as a child of the article element.</a></li>
       </ul>  
         </aside>
+      </footer>
+      </div><!-- closes container fluid hfgreen for first footer -->
 <footer>&nbsp;</footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <!-- Placed at the end of the document so the pages load faster -->
+    <!-- check for below -->
+    <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
- 
+   
