--- a/index_backup1.html
+++ b/index_backup1.html
@@ -99,15 +99,21 @@
       </div><!-- closes md4 -->
     </article>
     </div><!-- closes container fluid -->
-    <div class="container-fluid hfgreen">
+    <div class="container-fluid main_color">
     <footer>
     <aside>
+      <header>
+        <div class="col-md-4">
       <h4>References</h4>
+      </header>
       <ul>
         <li><a href="https://validator.w3.org/">Nu Validator</a></li>
         <li><a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/Sections_and_Outlines_of_an_HTML5_document">Notes on Assistive Technology and Validation</a></li>
         <li><a href="http://www.w3.org/html/wg/drafts/html/master/semantics.html#the-article-element">Each article should be identified, typically by including a heading (h1–h6 element) as a child of the article element.</a></li>
-      </ul>  
+      </ul>
+      </div>
+      <div class="col-md-4">Column Two</div>
+      <div class="col-md-4">Column Three</div>
         </aside>
       </footer>
       </div><!-- closes container fluid hfgreen for first footer -->
