--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       </div><!-- closes md4 -->
     </article>
     </div><!-- closes container fluid -->
-    <div class="container-fluid hfgreen">
+    <div class="container-fluid main_color">
     <footer>
     <aside>
       <h4>References</h4>
