--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <!-- stop here for Bootstrap nav class -->
       </div><!-- closes md12 -->
   </div><!-- closes container fluid -->
-  <div class="container-fluid">
+  <div class="container-fluid main_color">
     <article>
     <div class="col-md-12">
       <header>
