--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link href="usfsp.css" rel="stylesheet">
     <!-- end USFSP -->
   </head>
-  <body>
+  <body id="wrap_all">
     <div class="container-fluid header hfgreen">
       <div class="col-md-12">
     <header>
