--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
       <!-- stop here for Bootstrap nav class -->
       </div><!-- closes md12 -->
   </div><!-- closes container fluid -->
+  <main>
+    <!-- Note The main element is interesting for accessibility as a blind person will understand instantaneously that its screen reader is reading the main part of the document, it will say: "entering the main section..."-->
   <div class="container-fluid main_color">
     <article>
     <div class="col-md-12">
@@ -76,9 +78,9 @@
         <h2>Source Documents</h2>
       </header>
       </div><!-- closes md12 for header -->
-      <div class="col-xs-6 col-md-4">
+      <div class="col-md-4">
       <section>
-        <h3>Bootstrap</h3>
+        <h2>Bootstrap</h2>
         <h4><a href="http://getbootstrap.com/">Bootstrap Home Page</a></h4>
         <h4><a href="https://github.com/twbs/bootstrap">Bootstrap on Github</a></h4>
         <h4><a href="http://getbootstrap.com/getting-started/">Basic Bootstrap Template</a></h4>
@@ -89,7 +91,7 @@
       <header>
           <h2>Validation References</h2>
       </header>
-          <h3><a href="https://validator.w3.org/">W3C Validator</a></h3>
+          <h3>Image One</h3>
       </section>
       </div><!-- closes md4 -->
       <div class="col-md-4">
@@ -99,6 +101,7 @@
       </div><!-- closes md4 -->
     </article>
     </div><!-- closes container fluid -->
+    </main><!-- all else are references -->
     <div class="container-fluid main_color">
     <footer>
     <aside>
