--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </div><!-- closes md12 -->
   </div><!-- closes container fluid -->
   <main>
-    <!-- Note The main element is interesting for accessibility as a blind person will understand instantaneously that its screen reader is reading the main part of the document, it will say: "entering the main section..."-->
+    <!-- Note The main element is useful for accessibility, as a screen reader reading the main part of the document, will say: "entering the main section..."-->
   <div class="container-fluid main_color">
     <article>
     <div class="col-md-12">
@@ -80,10 +80,9 @@
       </div><!-- closes md12 for header -->
       <div class="col-md-4">
       <section>
-        <h2>Bootstrap</h2>
-        <h4><a href="http://getbootstrap.com/">Bootstrap Home Page</a></h4>
-        <h4><a href="https://github.com/twbs/bootstrap">Bootstrap on Github</a></h4>
-        <h4><a href="http://getbootstrap.com/getting-started/">Basic Bootstrap Template</a></h4>
+        <h2>Image One</h2>
+        <h4>content</h4>
+        
       </section>
       </div><!-- closes colmd4 -->
       <div class="col-md-4">
@@ -91,7 +90,7 @@
       <header>
           <h2>Validation References</h2>
       </header>
-          <h3>Image One</h3>
+          <h3>Image Two</h3>
       </section>
       </div><!-- closes md4 -->
       <div class="col-md-4">
@@ -103,17 +102,31 @@
     </div><!-- closes container fluid -->
     </main><!-- all else are references -->
     <div class="container-fluid main_color">
-    <footer>
+    <footer><!-- clean white footer -->
     <aside>
+      <div class="col-md-4">
+        <header>
       <h4>References</h4>
+        </header>
       <ul>
+        <li><a href="http://gsnedders.html5.org/outliner/">HTML5 Outliner Tool</a></li>
         <li><a href="https://validator.w3.org/">Nu Validator</a></li>
         <li><a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/Sections_and_Outlines_of_an_HTML5_document">Notes on Assistive Technology and Validation</a></li>
         <li><a href="http://www.w3.org/html/wg/drafts/html/master/semantics.html#the-article-element">Each article should be identified, typically by including a heading (h1–h6 element) as a child of the article element.</a></li>
       </ul>  
         </aside>
+        </div><!-- closes md4 -->
+        <div class="col-md-4">
+          <header><h4>Bootstrap</h4></header>
+          <ul>
+           <li><h4><a href="http://getbootstrap.com/">Bootstrap Home Page</a></h4></li>
+          <li><h4><a href="https://github.com/twbs/bootstrap">Bootstrap on Github</a></h4></li>
+          <li><h4><a href="http://getbootstrap.com/getting-started/">Basic Bootstrap Template</a></h4></li> 
+          </ul>
+        </div>
+        <div class="col-md-4"></div>
       </footer>
-      </div><!-- closes container fluid hfgreen for first footer -->
+      </div><!-- closes container fluid for first clean white footer -->
 <footer>&nbsp;</footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
