--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
         </aside>
         </div><!-- closes md4 -->
         <div class="col-md-4">
+          <aside>
           <header><h4>Bootstrap</h4></header>
           <ul>
            <li><h4><a href="http://getbootstrap.com/">Bootstrap Home Page</a></h4></li>
@@ -124,7 +125,12 @@
           <li><h4><a href="http://getbootstrap.com/getting-started/">Basic Bootstrap Template</a></h4></li> 
           </ul>
         </div>
-        <div class="col-md-4"></div>
+        </aside>
+        <aside>
+        <div class="col-md-4">
+          <header><h4>Third Column</h4></header>
+        </div>
+        </aside>
       </footer>
       </div><!-- closes container fluid for first clean white footer -->
 <footer>&nbsp;</footer>
