--- a/index.html
+++ b/index.html
@@ -118,18 +118,20 @@
         </div><!-- closes md4 -->
         <div class="col-md-4">
           <aside>
-          <header><h4>Bootstrap</h4></header>
+          <header>
+            <h4>Bootstrap</h4>
+          </header>
           <ul>
-           <li><h4><a href="http://getbootstrap.com/">Bootstrap Home Page</a></h4></li>
-          <li><h4><a href="https://github.com/twbs/bootstrap">Bootstrap on Github</a></h4></li>
-          <li><h4><a href="http://getbootstrap.com/getting-started/">Basic Bootstrap Template</a></h4></li> 
+            <li><a href="http://getbootstrap.com/">Bootstrap Home Page</a></li>
+            <li><a href="https://github.com/twbs/bootstrap">Bootstrap on Github</a></li>
+            <li><a href="http://getbootstrap.com/getting-started/">Basic Bootstrap Template</a></li> 
           </ul>
         </div>
         </aside>
         <aside>
         <div class="col-md-4">
           <header><h4>Third Column</h4></header>
-        </div>
+        </div><!-- closes colmd4 -->
         </aside>
       </footer>
       </div><!-- closes container fluid for first clean white footer -->
