--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </article>
     </div><!-- closes container fluid -->
     </main><!-- all else are references -->
-    <div class="container-fluid main_color">
+    <div class="container-fluid main_color" style="background:#ff0000;">
     <footer><!-- clean white footer -->
     <aside>
       <div class="col-md-4">
