--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </article>
     </div><!-- closes container fluid -->
     </main><!-- all else are references -->
-    <div class="container-fluid footer_color" style="background:#ff0000;">
+    <div class="container-fluid footer_color">
     <footer><!-- clean white footer -->
       <div class="col-md-4">
         <header>
