--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </div><!-- closes container fluid -->
     </main><!-- all else are references -->
     <div class="container-fluid footer_color">
-    <footer><!-- clean white footer -->
+    <footer><!-- USFSP footer color -->
       <div class="col-md-4">
         <header>
       <h4>References</h4>
@@ -141,5 +141,5 @@
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
-     
+      
   
