--- a/index_backup1.html
+++ b/index_backup1.html
@@ -27,7 +27,7 @@
     <link href="usfsp.css" rel="stylesheet">
     <!-- end USFSP -->
   </head>
-  <body>
+  <body class="wrap_all">
     <div class="container-fluid header hfgreen">
       <div class="col-md-12">
     <header>
@@ -69,19 +69,20 @@
       <!-- stop here for Bootstrap nav class -->
       </div><!-- closes md12 -->
   </div><!-- closes container fluid -->
-  <div class="container-fluid">
+  <main>
+    <!-- Note The main element is useful for accessibility, as a screen reader reading the main part of the document, will say: "entering the main section..."-->
+  <div class="container-fluid main_color">
     <article>
     <div class="col-md-12">
       <header>
         <h2>Source Documents</h2>
       </header>
       </div><!-- closes md12 for header -->
-      <div class="col-xs-6 col-md-4">
+      <div class="col-md-4">
       <section>
-        <h3>Bootstrap</h3>
-        <h4><a href="http://getbootstrap.com/">Bootstrap Home Page</a></h4>
-        <h4><a href="https://github.com/twbs/bootstrap">Bootstrap on Github</a></h4>
-        <h4><a href="http://getbootstrap.com/getting-started/">Basic Bootstrap Template</a></h4>
+        <h2>Image One</h2>
+        <h4>content</h4>
+        
       </section>
       </div><!-- closes colmd4 -->
       <div class="col-md-4">
@@ -89,7 +90,7 @@
       <header>
           <h2>Validation References</h2>
       </header>
-          <h3><a href="https://validator.w3.org/">W3C Validator</a></h3>
+          <h3>Image Two</h3>
       </section>
       </div><!-- closes md4 -->
       <div class="col-md-4">
@@ -99,24 +100,35 @@
       </div><!-- closes md4 -->
     </article>
     </div><!-- closes container fluid -->
-    <div class="container-fluid main_color">
-    <footer>
-    <aside>
-      <header>
-        <div class="col-md-4">
+    </main><!-- all else are references -->
+    <div class="container-fluid footer_color">
+    <footer><!-- USFSP footer color -->
+      <div class="col-md-4">
+        <header>
       <h4>References</h4>
-      </header>
+        </header>
       <ul>
+        <li><a href="http://gsnedders.html5.org/outliner/">HTML5 Outliner Tool</a></li>
         <li><a href="https://validator.w3.org/">Nu Validator</a></li>
         <li><a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/Sections_and_Outlines_of_an_HTML5_document">Notes on Assistive Technology and Validation</a></li>
         <li><a href="http://www.w3.org/html/wg/drafts/html/master/semantics.html#the-article-element">Each article should be identified, typically by including a heading (h1–h6 element) as a child of the article element.</a></li>
-      </ul>
+      </ul>  
       </div>
-      <div class="col-md-4">Column Two</div>
-      <div class="col-md-4">Column Three</div>
-        </aside>
+      <div class="col-md-4">
+          <header>
+            <h4>Bootstrap</h4>
+          </header>
+          <ul>
+            <li><a href="http://getbootstrap.com/">Bootstrap Home Page</a></li>
+            <li><a href="https://github.com/twbs/bootstrap">Bootstrap on Github</a></li>
+            <li><a href="http://getbootstrap.com/getting-started/">Basic Bootstrap Template</a></li> 
+          </ul>
+      </div>
+      <div class="col-md-4">
+          <header><h4>Third Column</h4></header>
+      </div><!-- closes colmd4 -->
       </footer>
-      </div><!-- closes container fluid hfgreen for first footer -->
+    </div><!-- closes container fluid for first clean white footer -->
 <footer>&nbsp;</footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -129,4 +141,6 @@
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
+      
+  
    
