--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
       </div><!-- closes md4 -->
       <div class="col-md-4">
         <aside>
-          Aside with Calendar
+          Scraped PHP content here
         </aside>
       </div><!-- closes md4 -->
     </article>
     </div><!-- closes container fluid -->
     <!-- start of second group -->
-<div class="container-fluid main_color" style="background:#ff000">
+<div class="container-fluid main_color" style="background:#ff0000">
     <article>
     <div class="col-md-12">
       <header>
