--- a/index.html
+++ b/index.html
@@ -75,8 +75,11 @@
     <article>
     <div class="col-md-12">
       <header>
-        <h2>Source Documents</h2>
+        <h2>Document Outlines</h2>
       </header>
+      <h3>4.3.10.1 Creating an outline</h3>
+      <h4>There are currently no known implementations of the outline algorithm in graphical browsers or assistive technology user agents, although the algorithm is implemented in other software such as conformance checkers. Therefore the outline algorithm cannot be relied upon to convey document structure to users. Authors are advised to use heading rank (h1-h6) to convey document structure.</h4>
+      <h4>Source: <a href="http://www.w3.org/TR/html5/sections.html#outlines">4.3. HTML5 Outlines</a></h4>
       </div><!-- closes md12 for header -->
       <div class="col-md-4">
       <section>
