--- a/index.html
+++ b/index.html
@@ -75,9 +75,8 @@
     <article>
     <div class="col-md-12">
       <header>
-        <h2>Document Outlines</h2>
+        <h2>Conformance, Validation, and...</h2>
       </header>
-      
       </div><!-- closes md12 for header -->
       <div class="col-md-4">
       <section>
@@ -89,10 +88,8 @@
       </div><!-- closes colmd4 -->
       <div class="col-md-4">
       <section>
-      <header>
           <h2>Conformance</h2>
-      </header>
-          <h3><blockquote></blockquote>I don’t work. I’m an old-world boulevardier. I drink tea with my pinky extended and I only expend effort on anything if it somehow amuses me to do so. For the last few years it’s amused me to spend time working on software for helping people check whether or not their documents meet certain requirements in the HTML spec.</h3>
+          <h3>Here's a good read: <blockquote>I don’t work. I’m an old-world boulevardier. I drink tea with my pinky extended and I only expend effort on anything if it somehow amuses me to do so. For the last few years it’s amused me to spend time working on software for helping people check whether or not their documents meet certain requirements in the HTML spec.</h3>
           <h3>Conformance and Validation are not the same thing.</blockquote></h3>
           <h3>DTD vs Schema</h3>
           <h4><a href="http://html5doctor.com/html5-check-it-before-you-wreck-it-with-miketm-smith/">Check It Before You Wreck It</a></h4>
