--- a/index.html
+++ b/index.html
@@ -88,10 +88,11 @@
       </div><!-- closes colmd4 -->
       <div class="col-md-4">
       <section>
-          <h2>Conformance</h2>
-          <h3>Here's a good read: <blockquote>I don’t work. I’m an old-world boulevardier. I drink tea with my pinky extended and I only expend effort on anything if it somehow amuses me to do so. For the last few years it’s amused me to spend time working on software for helping people check whether or not their documents meet certain requirements in the HTML spec.</h3>
-          <h3>Conformance and Validation are not the same thing.</blockquote></h3>
-          <h3>DTD vs Schema</h3>
+          <h2>Notes on Conformance:</h2>
+          <h3>Conformance and Validation are not the same thing.</h3>
+          <h3><blockquote>What is the difference between the w3c validator and the nu markup checker?</blockquote></h3>
+          <h3><blockquote>There are differences between W3C HTML and WHATWG HTML conformance </blockquote></h3>
+          <h3>DTD and Schema are not equivalent.</h3>
           <h4><a href="http://html5doctor.com/html5-check-it-before-you-wreck-it-with-miketm-smith/">Check It Before You Wreck It</a></h4>
       </section>
       </div><!-- closes md4 -->
