--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
       <section>
           <h2>Notes on Conformance:</h2>
           <h3>Conformance and Validation are not the same thing.</h3>
-          <h3><blockquote>What is the difference between the w3c validator and the nu markup checker?</blockquote></h3>
-          <h3><blockquote>There are differences between W3C HTML and WHATWG HTML conformance </blockquote></h3>
+          <h3>There are differences between the w3c validator and the nu markup checker.</h3>
+          <h3>There are differences between W3C HTML and WHATWG HTML conformance.</h3>
           <h3>DTD and Schema are not equivalent.</h3>
           <h4><a href="http://html5doctor.com/html5-check-it-before-you-wreck-it-with-miketm-smith/">Check It Before You Wreck It</a></h4>
       </section>
