--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
       <section>
           <h2>Notes on Conformance:</h2>
           <h3>Conformance and Validation are not the same thing.</h3>
-          <h3>There are differences between the w3c validator and the nu markup checker.</h3>
-          <h3>There are differences between W3C HTML and WHATWG HTML conformance.</h3>
-          <h3>DTD and Schema are not equivalent.</h3>
-          <h4><a href="http://html5doctor.com/html5-check-it-before-you-wreck-it-with-miketm-smith/">Check It Before You Wreck It</a></h4>
+          <h4>There are differences between the w3c validator and the nu markup checker.</h4>
+          <h4>There are differences between W3C HTML and WHATWG HTML conformance.</h4>
+          <h4>DTD and Schema are not equivalent.</h4>
+          <h4>Source: <a href="http://html5doctor.com/html5-check-it-before-you-wreck-it-with-miketm-smith/">Check It Before You Wreck It</a></h4>
       </section>
       </div><!-- closes md4 -->
       <div class="col-md-4">
