--- a/index.html
+++ b/index.html
@@ -89,10 +89,12 @@
       <div class="col-md-4">
       <section>
           <h2>Notes on Conformance:</h2>
-          <h3>Conformance and Validation are not the same thing.</h3>
-          <h4>There are differences between the w3c validator and the nu markup checker.</h4>
-          <h4>There are differences between W3C HTML and WHATWG HTML conformance.</h4>
-          <h4>DTD and Schema are not equivalent.</h4>
+          <ul>
+            <li>Conformance and Validation are not the same thing.</li>
+            <li>There are differences between the w3c validator and the nu markup checker.</li>
+            <li>There are differences between W3C HTML and WHATWG HTML conformance.</li>
+            <li>DTD and Schema are not equivalent.</li>
+          </ul>
           <h4>Source: <a href="http://html5doctor.com/html5-check-it-before-you-wreck-it-with-miketm-smith/">Check It Before You Wreck It</a></h4>
       </section>
       </div><!-- closes md4 -->
