--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
       <div class="col-md-4">
       <section>
         <h2>Image One</h2>
+        <img src="http://cook-my-catch.com/T3/images/testDFW-1200a1.jpg" class="img-responsive" alt="Screenshot showing default interface.">
         <h4>content</h4>
         
       </section>
