--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
     <article>
     <div class="col-md-12">
       <header>
-        <h2>Source Documents</h2>
+        <h2>Browser Tools</h2>
       </header>
       </div><!-- closes md12 for header -->
       <div class="col-md-4">
       <section>
         <h2>Image One</h2>
-        <img src="http://cook-my-catch.com/T3/images/testDFW-1200a1.jpg" class="img-responsive" alt="Screenshot showing default interface.">
+        <img src="http://cook-my-catch.com/T3special/images/BrowserToolStyle.jpg" class="img-responsive" alt="Screenshot showing default interface.">
         <h4>content</h4>
         
       </section>
@@ -126,13 +126,20 @@
       <header>
           <h2>Validation References</h2>
       </header>
-          <h3>Image Two</h3>
+          <h2>Image Two</h2>
+        <img src="http://cook-my-catch.com/T3special/images/Styles-1.jpg" class="img-responsive" alt="Screenshot showing default interface.">
+        <h4>content</h4>
       </section>
       </div><!-- closes md4 -->
       <div class="col-md-4">
-        <aside>
-          Aside with Calendar
-        </aside>
+        <section>
+      <header>
+          <h2>Validation References</h2>
+      </header>
+          <h2>Image Three</h2>
+        <img src="http://cook-my-catch.com/T3special/images/Styles-2.jpg" class="img-responsive" alt="Screenshot showing default interface.">
+        <h4>content</h4>
+      </section>
       </div><!-- closes md4 -->
     </article>
     </div><!-- closes container fluid -->    
