--- a/index.html
+++ b/index.html
@@ -84,11 +84,14 @@
         <h3>4.3.10.1 Creating an outline</h3>
         <h4>There are currently no known implementations of the outline algorithm in graphical browsers or assistive technology user agents, although the algorithm is implemented in other software such as conformance checkers. Therefore the outline algorithm cannot be relied upon to convey document structure to users. Authors are advised to use heading rank (h1-h6) to convey document structure.</h4>
         <h4>Source: <a href="http://www.w3.org/TR/html5/sections.html#outlines">4.3. HTML5 Outlines</a></h4>
+        <h3>Important to note: The HTML5 header element does not take part in the outline algorithm.</h3>
+        <h4>Source: <a href="http://www.w3.org/TR/2014/CR-html5-20140731/sections.html#the-header-element">W3C section on header element</a></h4>
       </section>
       </div><!-- closes colmd4 -->
       <div class="col-md-4">
       <section>
-          <h2>Notes on Conformance:</h2>
+          <h2>Conformance:</h2>
+          
           <ul>
             <li>Conformance and Validation are not the same thing.</li>
             <li>There are differences between the w3c validator and the nu markup checker.</li>
@@ -100,7 +103,7 @@
       </div><!-- closes md4 -->
       <div class="col-md-4">
         <aside>
-          Scraped PHP content here
+          <a href="http://www.w3.org/TR/2014/CR-html5-20140731/sections.html#the-header-element">The header element is not sectioning content; it doesn't introduce a new section.</a>
         </aside>
       </div><!-- closes md4 -->
     </article>
