--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
       <div class="col-md-4">
         <aside>
           <a href="http://www.w3.org/TR/2014/CR-html5-20140731/sections.html#the-header-element">The header element is not sectioning content; it doesn't introduce a new section.</a>
+          <a href="http://www.w3.org/TR/2014/CR-html5-20140731/sections.html#the-footer-element">The element header must not appear as a descendant of the footer element.</a>This information was discovered after a check with the nu validator
         </aside>
       </div><!-- closes md4 -->
     </article>
@@ -148,9 +149,6 @@
     <div class="container-fluid footer_color">
     <footer><!-- USFSP footer color -->
       <div class="col-md-4">
-        <header>
-      <h4>References</h4>
-        </header>
       <ul>
         <li><a href="http://gsnedders.html5.org/outliner/">HTML5 Outliner Tool</a></li>
         <li><a href="https://validator.w3.org/">Nu Validator</a></li>
@@ -159,9 +157,6 @@
       </ul>  
       </div>
       <div class="col-md-4">
-          <header>
-            <h4>Bootstrap</h4>
-          </header>
           <ul>
             <li><a href="http://getbootstrap.com/">Bootstrap Home Page</a></li>
             <li><a href="https://github.com/twbs/bootstrap">Bootstrap on Github</a></li>
@@ -169,7 +164,6 @@
           </ul>
       </div>
       <div class="col-md-4">
-          <header><h4>Third Column</h4></header>
       </div><!-- closes colmd4 -->
       </footer>
     </div><!-- closes container fluid for first clean white footer -->
