--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
       </div><!-- closes md4 -->
       <div class="col-md-4">
         <aside>
+          <h4>Just as an aside...Why we care about outlines..</h4>
+          <p>Document outlines rely on heading structure, and this was and is used to generate outlines for assitive technology.  <a href="http://webaim.org/projects/screenreadersurvey/#headings">See the results of webaim survey here.</a><p>
           <a href="http://www.w3.org/TR/2014/CR-html5-20140731/sections.html#the-header-element">The header element is not sectioning content; it doesn't introduce a new section.</a>
           <a href="http://www.w3.org/TR/2014/CR-html5-20140731/sections.html#the-footer-element">The element header must not appear as a descendant of the footer element.</a>This information was discovered after a check with the nu validator
         </aside>
