--- a/index.html
+++ b/index.html
@@ -103,11 +103,13 @@
       </div><!-- closes md4 -->
       <div class="col-md-4">
         <aside>
-          <h3>Aside</h3>
-          <h4>Why we care about outlines</h4>
+          <h2>Aside</h2>
+          <h3>Why we care about outlines</h3>
           <p>Document outlines rely on heading structure, and this was and is used to generate outlines for assitive technology.  <a href="http://webaim.org/projects/screenreadersurvey/#headings">See the results of webaim survey here.</a><p>
-          <a href="http://www.w3.org/TR/2014/CR-html5-20140731/sections.html#the-header-element">The header element is not sectioning content; it doesn't introduce a new section.</a>
-          <a href="http://www.w3.org/TR/2014/CR-html5-20140731/sections.html#the-footer-element">The element header must not appear as a descendant of the footer element.</a>This information was discovered after a check with the nu validator
+          <h4>Does the HTML5 header element help?</h4>
+          <h4>The header element is not sectioning content; it doesn't introduce a new section.</h4>
+          <a href="http://www.w3.org/TR/2014/CR-html5-20140731/sections.html#the-header-element">Link to the W3C reference</a>
+          
         </aside>
       </div><!-- closes md4 -->
     </article>
