--- a/index.html
+++ b/index.html
@@ -84,8 +84,6 @@
         <h3>4.3.10.1 Creating an outline</h3>
         <h4>There are currently no known implementations of the outline algorithm in graphical browsers or assistive technology user agents, although the algorithm is implemented in other software such as conformance checkers. Therefore the outline algorithm cannot be relied upon to convey document structure to users. Authors are advised to use heading rank (h1-h6) to convey document structure.</h4>
         <h4>Source: <a href="http://www.w3.org/TR/html5/sections.html#outlines">4.3. HTML5 Outlines</a></h4>
-        <h3>Important to note: The HTML5 header element does not take part in the outline algorithm.</h3>
-        <h4>Source: <a href="http://www.w3.org/TR/2014/CR-html5-20140731/sections.html#the-header-element">W3C section on header element</a></h4>
       </section>
       </div><!-- closes colmd4 -->
       <div class="col-md-4">
@@ -105,9 +103,10 @@
         <aside>
           <h2>Aside</h2>
           <h3>Why we care about outlines</h3>
-          <p>Document outlines rely on heading structure, and this was and is used to generate outlines for assitive technology.  <a href="http://webaim.org/projects/screenreadersurvey/#headings">See the results of webaim survey here.</a><p>
+          <p>Document outlines rely on heading structure, and this was and is used to generate outlines for assitive technology.<a href="http://webaim.org/projects/screenreadersurvey/#headings">See the results of an earlier webaim survey here.</a>
+          <a href="http://webaim.org/projects/screenreadersurvey5/">Screen Reader Survey #5 (2014)</a>65% of Respondents use headings to navigate through the page.<p>
           <h4>Does the HTML5 header element help?</h4>
-          <h4>The header element is not sectioning content; it doesn't introduce a new section.</h4>
+          <h4>Important to note: The HTML5 header element does not take part in the outline algorithm. The header element is not sectioning content; it doesn't introduce a new section.</h4>
           <a href="http://www.w3.org/TR/2014/CR-html5-20140731/sections.html#the-header-element">Link to the W3C reference</a>
           
         </aside>
