--- a/index.html
+++ b/index.html
@@ -69,15 +69,24 @@
       <!-- stop here for Bootstrap nav class -->
       </div><!-- closes md12 -->
   </div><!-- closes container fluid -->
-  <main>
-    <!-- Note The main element is useful for accessibility, as a screen reader reading the main part of the document, will say: "entering the main section..."-->
-  <div class="container-fluid main_color" style="background:#e3e7ea">
+  <main><!-- used for accessibility, screen readers will announce entering main section-->
     <article>
-    <div class="col-md-12">
-      <header>
-        <h2>Conformance, Validation, and...</h2>
-      </header>
-      </div><!-- closes md12 for header -->
+    <div class="container-fluid main_color">
+      <header><h1>How I Built This Web Page</h1></header>
+    </div><!-- closes containerfluid main_color with header -->
+    <div class="container-fluid main_color">
+        <div class="col-md-8">
+          <section>
+          <h2>Introduction</h2>
+          </section>
+          </div><!-- closes col md4 -->
+      <div class="col-md-4">
+      <aside>
+        Aside for PHP scraping
+      </aside>
+      </div><!-- closes colmd4 -->
+    </div><!-- closes container-fluid main_color -->
+    <div class="container-fluid main_color">
       <div class="col-md-4">
       <section>
         <h2>Outlines</h2>
@@ -89,7 +98,6 @@
       <div class="col-md-4">
       <section>
           <h2>Conformance:</h2>
-          
           <ul>
             <li>Conformance and Validation are not the same thing.</li>
             <li>There are differences between the w3c validator and the nu markup checker.</li>
@@ -102,19 +110,18 @@
       <div class="col-md-4">
         <aside>
           <h2>Aside</h2>
-          <h3>Why we care about outlines</h3>
-          <p>Document outlines rely on heading structure, and this was and is used to generate outlines for assitive technology.<a href="http://webaim.org/projects/screenreadersurvey/#headings">See the results of an earlier webaim survey here.</a>
-          <a href="http://webaim.org/projects/screenreadersurvey5/">Screen Reader Survey #5 (2014)</a>65% of Respondents use headings to navigate through the page.<p>
+          <h3>Why we care about outlines.</h3>
+          <h4>Document outlines rely on heading structure, and this was and is used to generate outlines for assitive technology.<a href="http://webaim.org/projects/screenreadersurvey/#headings">See the results of an earlier webaim survey here.</a>
+          <a href="http://webaim.org/projects/screenreadersurvey5/">Screen Reader Survey #5 (2014)</a>&nbsp;65% of Respondents use headings to navigate through the page.</h4>
           <h4>Does the HTML5 header element help?</h4>
-          <h4>Important to note: The HTML5 header element does not take part in the outline algorithm. The header element is not sectioning content; it doesn't introduce a new section.</h4>
+          <h4>The HTML5 header element does not take part in the outline algorithm. The header element is not sectioning content; it doesn't introduce a new section.</h4>
           <a href="http://www.w3.org/TR/2014/CR-html5-20140731/sections.html#the-header-element">Link to the W3C reference</a>
-          
         </aside>
       </div><!-- closes md4 -->
     </article>
     </div><!-- closes container fluid -->
     <!-- start of second group -->
-<div class="container-fluid main_color" style="background:#ff0000">
+<div class="container-fluid main_color"  style="background:#e3e7ea">
     <article>
     <div class="col-md-12">
       <header>
