--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </div><!-- closes container fluid -->
   <main><!-- used for accessibility, screen readers will announce entering main section-->
     <article>
-    <div class="container-fluid main_color">
+    <div class="container-fluid main_color" style="background:#e3e7ea">
       <header><h1>How I Built This Web Page</h1></header>
     </div><!-- closes containerfluid main_color with header -->
     <div class="container-fluid main_color">
