--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <main><!-- used for accessibility, screen readers will announce entering main section-->
     <article>
     <div class="container-fluid main_color" style="background:#e3e7ea">
-      <header><h1>How I Built This Web Page</h1></header>
+      <header><h2>How I Built This Web Page</h2></header>
     </div><!-- closes containerfluid main_color with header -->
     <div class="container-fluid main_color">
         <div class="col-md-8">
@@ -82,7 +82,10 @@
           </div><!-- closes col md4 -->
       <div class="col-md-4">
       <aside>
-        Aside for PHP scraping
+        Aside for PHP scraping...or
+        <h3>What about HTML5 and the h1 tags?</h3>
+        <a href="http://webdesign.tutsplus.com/articles/the-truth-about-multiple-h1-tags-in-the-html5-era--webdesign-16824">Why we are told that using multiple h1 tags is GOOD</a>
+        <a href="https://www.w3.org/wiki/HTML/Usage/Headings/h1only">Why we are told using multiple h1 tags is BAD</a>
       </aside>
       </div><!-- closes colmd4 -->
     </div><!-- closes container-fluid main_color -->
@@ -118,11 +121,9 @@
           <a href="http://www.w3.org/TR/2014/CR-html5-20140731/sections.html#the-header-element">Link to the W3C reference</a>
         </aside>
       </div><!-- closes md4 -->
-    </article>
     </div><!-- closes container fluid -->
     <!-- start of second group -->
 <div class="container-fluid main_color"  style="background:#e3e7ea">
-    <article>
     <div class="col-md-12">
       <header>
         <h2>Browser Tools</h2>
