--- a/index.html
+++ b/index.html
@@ -70,10 +70,12 @@
       </div><!-- closes md12 -->
   </div><!-- closes container fluid -->
   <main><!-- used for accessibility, screen readers will announce entering main section-->
-    <div class="container-fluid main_color" style="background:#e3e7ea">
-      <header><h2>How I Built This Web Page</h2></header>
-    </div><!-- closes containerfluid main_color with header -->
     <div class="container-fluid main_color">
+      <div class="col-md-12">
+      <header><h2>How I Built This Web Page</h2></header>
+      </div><!-- closes colmd12 -->
+    </div><!-- closes containerfluid main_color with header How I built the web page-->
+    <div class="container-fluid main_color" style="background:#e3e7ea">
         <div class="col-md-8">
           <section>
           <h2>Introduction</h2>
@@ -83,7 +85,7 @@
       <aside>
         Aside for PHP scraping...or
         <h3>What about HTML5 and the h1 tags?</h3>
-        <a href="http://webdesign.tutsplus.com/articles/the-truth-about-multiple-h1-tags-in-the-html5-era--webdesign-16824">Why we are told that using multiple h1 tags is GOOD</a>
+        <a href="http://webdesign.tutsplus.com/articles/the-truth-about-multiple-h1-tags-in-the-html5-era--webdesign-16824">Why we are told that using multiple h1 tags is GOOD</a><br />
         <a href="https://www.w3.org/wiki/HTML/Usage/Headings/h1only">Why we are told using multiple h1 tags is BAD</a>
       </aside>
       </div><!-- closes colmd4 -->
