--- a/index.html
+++ b/index.html
@@ -125,23 +125,22 @@
     </div><!-- closes container fluid -->
     <!-- start of second group -->
 <div class="container-fluid main_color" style="background:#e3e7ea">
+  <section><!-- opens section for finding the right styles -->
+    <div class="col-md-12">
+      <h2>Finding the Right Styles</h2>
+    </div>
       <div class="col-md-4">
-        <section>
-        <h2>Image One</h2>
+        <h3>Image One</h3>
         <img src="http://cook-my-catch.com/T3special/BrowserToolStyle.jpg" class="img-responsive" alt="Screenshot showing default interface.">
         <h4>content</h4>
-      </section>
       </div><!-- closes colmd4 -->
       <div class="col-md-4">
-      <section>
-          <h2>Image Two</h2>
+          <h3>Image Two</h3>
         <img src="http://cook-my-catch.com/T3special/Styles-1.jpg" class="img-responsive" alt="Screenshot showing default interface.">
         <h4>content</h4>
-      </section>
       </div><!-- closes md4 -->
       <div class="col-md-4">
-        <section>
-          <h2>Image Three</h2>
+          <h3>Image Three</h3>
         <img src="http://cook-my-catch.com/T3special/Styles-2.jpg" class="img-responsive" alt="Screenshot showing default interface.">
         <h4>content</h4>
         </section>
