--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <!-- Start of Visual -->
 
  
-  <div class="container-fluid" style="background:url('../T3/images/HarborBoats.jpg') no-repeat center center;height:500px;background-size:cover;">&nbsp;</div>
+  <div class="container-fluid" style="background:url('http://cook-my-catch.com/T3/images/HarborBoats.jpg') no-repeat center center;height:500px;background-size:cover;">&nbsp;</div>
    <div class="container-fluid" style="background:#000030;color:#ffffff;"><h6>Image by Sharon Austin. Creative Commons Attribution 3.0 license.</h6>
    </div>    
 </div>
