--- a/index.html
+++ b/index.html
@@ -90,6 +90,29 @@
       </aside>
       </div><!-- closes colmd4 -->
     </div><!-- closes container-fluid main_color -->
+    <div class="container-fluid main_color" style="background:#e3e7ea">
+  <section><!-- opens section for finding the right styles -->
+    <div class="col-md-12">
+      <h2>Finding the Right Styles</h2>
+    </div>
+      <div class="col-md-4">
+        <h3>Image One</h3>
+        <img src="http://cook-my-catch.com/T3special/ConsoleTool-1.gif" class="img-responsive" alt="Screenshot showing default interface.">
+        <h4>content</h4>
+      </div><!-- closes colmd4 -->
+      <div class="col-md-4">
+          <h3>Image Two</h3>
+        <img src="http://cook-my-catch.com/T3special/NuChecker-1.gif" class="img-responsive" alt="Screenshot showing default interface.">
+        <h4>content</h4>
+      </div><!-- closes md4 -->
+      <div class="col-md-4">
+          <h3>Image Three</h3>
+        <img src="http://cook-my-catch.com/T3special/W3CChecker-1.gif" class="img-responsive" alt="Screenshot showing default interface.">
+        <h4>content</h4>
+        </section>
+      </div><!-- closes md4 -->
+    </div><!-- closes container fluid -->  
+    
     <div class="container-fluid main_color">
       <div class="col-md-4">
       <section>
@@ -123,7 +146,6 @@
         </aside>
       </div><!-- closes md4 -->
     </div><!-- closes container fluid -->
-    <!-- start of second group -->
 <div class="container-fluid main_color" style="background:#e3e7ea">
   <section><!-- opens section for finding the right styles -->
     <div class="col-md-12">
@@ -147,7 +169,6 @@
       </div><!-- closes md4 -->
     </div><!-- closes container fluid -->    
     
-    <!-- end of second group -->
     </main><!-- all else are references -->
     <div class="container-fluid footer_color">
     <footer><!-- USFSP footer color -->
