--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
       </div><!-- closes colmd4 -->
     </div><!-- closes container-fluid main_color -->
     <div class="container-fluid main_color" style="background:#e3e7ea">
-  <section><!-- opens section for finding the right styles -->
+  <section><!-- opens section for looking for problems -->
     <div class="col-md-12">
-      <h2>How I Found Problems</h2>
-    </div>
+      <h2>Looking for Problems</h2>
+    </div><!-- closes colmd12 -->
       <div class="col-md-4">
         <h3>Image One</h3>
         <img src="http://cook-my-catch.com/T3special/ConsoleTool-1.gif" class="img-responsive" alt="Screenshot showing default interface.">
