--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
       </aside>
       </div><!-- closes colmd4 -->
     </div><!-- closes container-fluid main_color -->
+    <section>
     <div class="container-fluid main_color" style="background:#e3e7ea">
-  <section><!-- opens section for looking for problems -->
     <div class="col-md-12">
       <h2>Looking for Problems</h2>
     </div><!-- closes colmd12 -->
@@ -110,9 +110,8 @@
         <img src="http://cook-my-catch.com/T3special/W3CChecker-1.gif" class="img-responsive" alt="Screenshot showing default interface.">
         <h4>content</h4>
         </div><!-- closes md4 -->
-      </section>
-    </div><!-- closes container fluid -->  
-    
+      </div><!-- closes container fluid -->  
+    </section>
     <div class="container-fluid main_color">
       <div class="col-md-4">
       <section>
