--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <li>DTD and Schema are not equivalent.</li>
           </ul>
           <h4>Source: <a href="http://html5doctor.com/html5-check-it-before-you-wreck-it-with-miketm-smith/">Check It Before You Wreck It</a></h4>
-      </div><!-- closes md4 -->
+      </div>
       </section>
       <div class="col-md-4">
         <aside>
@@ -143,7 +143,8 @@
         </aside>
       </div><!-- closes md4 -->
     </div><!-- closes container fluid -->
-      <section><!-- opens section for finding the right styles -->
+    
+    <section><!-- opens section for finding the right styles -->
 <div class="container-fluid main_color" style="background:#e3e7ea">
     <div class="col-md-12">
       <h2>Finding the Right Styles</h2>
