--- a/index.html
+++ b/index.html
@@ -82,14 +82,12 @@
           </section>
           </div><!-- closes col md4 -->
       <div class="col-md-4">
-      <aside>
         Aside for PHP scraping...or
         <h3>What about HTML5 and the h1 tags?</h3>
         <a href="http://webdesign.tutsplus.com/articles/the-truth-about-multiple-h1-tags-in-the-html5-era--webdesign-16824">Why we are told that using multiple h1 tags is GOOD</a><br />
         <a href="https://www.w3.org/wiki/HTML/Usage/Headings/h1only">Why we are told using multiple h1 tags is BAD</a>
-      </aside>
       </div><!-- closes colmd4 -->
-    </div><!-- closes container-fluid main_color -->
+     </div><!-- closes container-fluid main_color -->
     <section>
     <div class="container-fluid main_color" style="background:#e3e7ea">
       <div class="col-md-12">
@@ -129,10 +127,8 @@
             <li>DTD and Schema are not equivalent.</li>
           </ul>
           <h4>Source: <a href="http://html5doctor.com/html5-check-it-before-you-wreck-it-with-miketm-smith/">Check It Before You Wreck It</a></h4>
-      </div>
-      </section>
+      </div><!-- colmd4 -->
       <div class="col-md-4">
-        <aside>
           <h2>Aside</h2>
           <h3>Why we care about outlines.</h3>
           <h4>Document outlines rely on heading structure, and this was and is used to generate outlines for assitive technology.<a href="http://webaim.org/projects/screenreadersurvey/#headings">See the results of an earlier webaim survey here.</a>
@@ -140,12 +136,11 @@
           <h4>Does the HTML5 header element help?</h4>
           <h4>The HTML5 header element does not take part in the outline algorithm. The header element is not sectioning content; it doesn't introduce a new section.</h4>
           <a href="http://www.w3.org/TR/2014/CR-html5-20140731/sections.html#the-header-element">Link to the W3C reference</a>
-        </aside>
       </div><!-- closes md4 -->
     </div><!-- closes container fluid -->
-    
+    </section>
     <section><!-- opens section for finding the right styles -->
-<div class="container-fluid main_color" style="background:#e3e7ea">
+    <div class="container-fluid main_color" style="background:#e3e7ea">
     <div class="col-md-12">
       <h2>Finding the Right Styles</h2>
     </div>
