--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
      </div><!-- closes container-fluid main_color -->
     <section>
     <div class="container-fluid main_color" style="background:#e3e7ea">
-      <div class="col-md-12">
+      <div class="col-md-12" style="border-bottom:solid, 3px, #000000;">
         <h2>Looking for Problems</h2>
       </div><!-- closes colmd12 -->
       <div class="col-md-4">
